Mostly finished Poke Guess had to move initialization into getJson callback function to not result in deadlock. Need to iron out bugs.

--- a/mean-homework/week3/homework/poke-guess/index.html
+++ b/mean-homework/week3/homework/poke-guess/index.html
@@ -59,14 +59,14 @@
 					<h1>Who's that Pokemon?</h1>
 					<form class="form-inline" role="form">
 					  <div class="form-group">
-					    <input type="text" class="form-control" id="pokemon-name-input" placeholder="Enter pokemon name">
+					    <input id="pokemon-name-input" type="text" class="form-control" placeholder="Enter pokemon name">
 					  </div>
-					  <button type="submit" class="btn btn-warning btn-lg">Submit</button>
+					  <button id="submit-button" type="button" class="btn btn-warning btn-lg">Submit</button>
 					</form>					
 				</div><!-- /col-lg-6 -->
 				<div class="pokemon">
 						<div class="col-lg-6">
-							<img class="img-responsive" src="assets/img/Charmeleon.png" alt="">
+							<img id = "pokemon-image" class="img-responsive" src="assets/img/Charmeleon.png" alt="">
 						</div><!-- /col-lg-6 -->
 				</div>
 				<div class="score">
