Adding Riot API exercise and readme and readme referenced images.

--- a/mean-homework/week3/homework/poke-guess/index.html
+++ b/mean-homework/week3/homework/poke-guess/index.html
@@ -12,6 +12,7 @@
 		
 		<!-- Javascript Resources -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
+		<script type="text/javascript" src="./assets/bower_components/wad/build/wad.min.js"></script>
 		<script type="text/javascript" src="./poke-guess.js"></script>
 		<script type="text/javascript" src="./pokemon.js"></script>
 		<script type="text/javascript" src="./driver.js"></script>
