Have partially functioning web app that can perform reads, but cannot create due to CORS. Updates work, but currently they direclty impact the data on page for the update success is confirmed. Did not test delete since I cannot create. Though I could use client side data to simulate.

--- a/mean-homework/week4/longboard-crud-app/client/index.html
+++ b/mean-homework/week4/longboard-crud-app/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation for Apps</title>
+    <title>Hillyard Longboard Skateshop</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="/assets/css/app.css" rel="stylesheet" type="text/css">
     <script src="/assets/js/foundation.js"></script>
@@ -13,12 +13,9 @@
   </head>
   <body>
     <div class="grid-frame vertical">
-      <div class="grid-content shrink" style="padding: 0;">
-        <div ng-include="" src="'partials/nav.html'"></div>
-      </div>
       <div class="grid-content">
         <!--<div class="grid-container">-->
-          <div ng-class="['ui-animation']" ui-view></div>
+          <div ui-view></div>
         <!--</div>-->
       </div>
     </div>
