Added additional initial Html elements.

--- a/mean-homework/week5/poke-guess-v2/public/index.html
+++ b/mean-homework/week5/poke-guess-v2/public/index.html
@@ -2,12 +2,22 @@
 <html>
 <head>
 	<title>Poke Guess</title>
-	<script  src="assets/js/angular.js"></script>
-	<script  src="assets/js/poke-guess-api.js"></script>
-	<script  src="assets/js/poke-guess-app.js"></script>
+	<script  src="assets/js/angular.min.js"></script>
+	<script  src="src/poke-guess-api.js"></script>
+	<script  src="src/poke-guess-app.js"></script>
 </head>
 <body ng-app="PokeGuessApp" ng-controller = "MainController as main">
-	<div ng-show="main.pokemonData">{{main.pokemonData}}</div>
-	<div ng-show="main.guessData">{{main.guessData}}</div>
+	<!-- Space to display test data -->
+	<div ng-show="main.testPokemonData">{{main.testPokemonData}}</div>
+	<div ng-show="main.testGuessData">{{main.testGuessData}}</div>
+	<!-- Content -->
+	<form ng-hide="main.testPokemonData || main.testGuessData">
+		<label for="guess">Who's that Pokemon?</label><br>
+		<input type="text" placeholder="Enter pokemon name" id="guess"/>
+		<button type="button">Submit</button>
+		<div>
+			<img ng-src="{{main.pokemonData.imgPath}}" />
+		</div>
+	</form>
 </body>
 </html>
