--- a/mean-homework/week5/poke-guess-v2/public/index.html
+++ b/mean-homework/week5/poke-guess-v2/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Poke Guess</title>
 	<script  src="assets/js/angular.min.js"></script>
+	<script  src="assets/js/angular.audio.js"></script>
 	<script  src="src/poke-guess-api.js"></script>
 	<script  src="src/poke-guess-app.js"></script>
 </head>
@@ -13,11 +14,19 @@
 	<!-- Content -->
 	<form ng-hide="main.testPokemonData || main.testGuessData">
 		<label for="guess">Who's that Pokemon?</label><br>
-		<input type="text" placeholder="Enter pokemon name" id="guess"/>
-		<button type="button">Submit</button>
+		<input type="text" ng-model="main.guess" placeholder="Enter pokemon name" id="guess"/>
+		<button type="button" ng-click="main.checkGuess()">Submit</button>
 		<div>
 			<img ng-src="{{main.pokemonData.imgPath}}" />
 		</div>
+
+		<img ng-repeat = "imgPath in main.scoreImgArray track by $index" ng-src="{{imgPath}}" />
+		<br>
+		<img ng-repeat = "imgPath in main.strikesImgArray track by $index" ng-src="{{imgPath}}" />
+		<br>
+		<h1>Time Remaining:</h1>
+		<h1>{{main.countdown}}</h1>
+		<h2>Enter the pokemon's name and press submit before the time runs out.</h2>
 	</form>
 </body>
 </html>
