Fixed layout-align attribute on Pokemon Image div.

--- a/mean-homework/week5/poke-guess-v2/public/index.html
+++ b/mean-homework/week5/poke-guess-v2/public/index.html
@@ -28,7 +28,7 @@
                     <button type="button" ng-click="main.checkGuess()">Submit</button>
                 </div>
             </div>
-            <div layout="row" layout align="center">
+            <div layout="row" layout-align="center">
                 <img ng-src="{{main.pokemonData.imgPath}}" />
             </div>
         </div>
