--- a/mean-exercises/week9/angular-routes-exercise/public/index.html
+++ b/mean-exercises/week9/angular-routes-exercise/public/index.html
@@ -3,13 +3,22 @@
 
   <head>
     <title>Why I love Washington!</title>
-    <script src="https://code.angularjs.org/1.3.15/angular.js" data-semver="1.3.15" data-require="angular.js@1.3.15"></script>
+    <!-- Angular Material CSS now available via Google CDN; version 0.9.4 used here -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
+
+    <!-- Angular Material Dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script data-require="angular-route@1.3.15" data-semver="1.3.15" src="https://code.angularjs.org/1.3.15/angular-route.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+
+    <!-- Angular Material Javascript now available via Google CDN; version 0.9.4 used here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
+
     <script src="app.js"></script>
-    <script src="home-controller.js"></script>
-    <script src="about-controller.js"></script>
-    <script src="whyilove-controller.js"></script>
+    <script src="controllers/home-controller.js"></script>
+    <script src="controllers/about-controller.js"></script>
+    <script src="controllers/whyilove-controller.js"></script>
   </head>
 
   <body>
